[package]
name = "jsona-openapi"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsona = { git = "https://github.com/sigoden/jsona" }
serde_json = "1"
thiserror = "1"
jsona_openapi_spec = { path = "../spec"}
