[package]
name = "jsona-openapi"
version = "0.1.8"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = "Parse openapi in jsona format"
documentation = "https://github.com/sigoden/jsona-openapi/tree/master/core"
repository = "https://github.com/sigoden/jsona-openapi"
keywords = ["jsona", "openapi", "swagger"]
license = "MIT"
readme = "_README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsona = { version = "0.1.10" }
serde_json = "1"
thiserror = "1"
jsona_openapi_spec = { path = "../spec", version = "0.1.6" }
serde = { version = "1.0", features = ["derive"] }
