[package]
name = "jsona-wasm-openapi"
description = "A openapi dsl in jsona"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jsona = { version = "0.6" }
jsona-openapi = { path = "../jsona-openapi", version = "0.2" }
serde = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }