[package]
name = "jsona_openapi_spec"
version = "0.1.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
indexmap = { version = "1.6", features = ["serde-1"] }
