[package]
name = "jsona_openapi_spec"
version = "0.1.7"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = "Openapi type definitions"
documentation = "https://github.com/sigoden/jsona-openapi/tree/master/spec"
repository = "https://github.com/sigoden/jsona-openapi"
keywords = ["jsona", "openapi", "swagger"]
license = "MIT"
readme = "_README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
indexmap = { version = "1.6", features = ["serde-1"] }
