[package]
name = "jsona-openapi"
version = "0.2.1"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2021"
description = "A openapi dsl in jsona"
documentation = "https://github.com/sigoden/jsona-openapi/tree/master/core"
repository = "https://github.com/sigoden/jsona-openapi"
keywords = ["jsona", "openapi", "swagger"]
license = "MIT"
readme = "_README.md"


[dependencies]
jsona = { git = "https://github.com/jsona/jsona", version = "0.5" }
jsona-schema = { git = "https://github.com/jsona/jsona", version = "0.2" }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "~1.6", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
insta = "1.15"

[[test]]
name = "integration"
path = "tests/tests.rs"